# ad-diwan

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-image.yml
ad_diwan/: __init__.py
ad_diwan/api/: __init__.py  apps.py  urls.py
ad_diwan/api/tests/: __init__.py  test_views.py
ad_diwan/apps/: __init__.py  mixins.py
ad_diwan/apps/categories/: __init__.py  apps.py  models.py
ad_diwan/apps/categories/migrations/: 0001_initial.py
ad_diwan/apps/categories/tests/: __init__.py  test_models.py
ad_diwan/apps/home/: apps.py  models.py
ad_diwan/apps/home/tests/: __init__.py  test_models.py
ad_diwan/apps/indexes/: __init__.py  apps.py  models.py
ad_diwan/apps/indexes/migrations/: 0001_initial.py
ad_diwan/apps/indexes/tests/: __init__.py  test_models.py
ad_diwan/apps/poems/: __init__.py  apps.py  models.py
ad_diwan/apps/poems/migrations/: 0001_initial.py  0002_initial.py
ad_diwan/apps/poems/tests/: __init__.py  test_models.py
ad_diwan/apps/poets/: __init__.py  apps.py  models.py
ad_diwan/apps/poets/migrations/: 0001_initial.py
ad_diwan/apps/poets/tests/: __init__.py  test_models.py
ad_diwan/apps/tags/: apps.py  models.py
ad_diwan/apps/tags/migrations/: 0001_initial.py
ad_diwan/cms/: __init__.py  apps.py  blocks.py
ad_diwan/ui/: __init__.py  apps.py  urls.py  views.py
ad_diwan/ui/static/ad_diwan/: .prettierrc  README.md
ad_diwan/ui/templates/ad_diwan/: about.html  base.html  category.html  contact.html  contact_landing.html  index.html  poem.html  poet.html  (+1 more)
(+5 files in other folders)
